Actions
Bug #2131
closedbeadm list -a missing units designation
Start date:
2012-02-15
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Didn't notice this before, but after upgrading OI to
oi_151a2 32-bit (illumos fc320b2833d3)
came across the following:
richard@shuttleX:~$ beadm list BE Active Mountpoint Space Policy Created oi_151.1.2 NR / 7,72G static 2012-02-14 07:25 oi_151a - - 13,6M static 2011-10-29 11:20 openindiana - - 22,8M static 2011-10-12 07:44 richard@shuttleX:~$ beadm list -a BE/Dataset/Snapshot Active Mountpoint Space Policy Created oi_151.1.2 rpool/ROOT/oi_151.1.2 NR / 7,32 static 2012-02-14 07:25 rpool/ROOT/oi_151.1.2@2011-10-29-09:20:36 - - 167 static 2011-10-29 11:20 rpool/ROOT/oi_151.1.2@2012-02-14-06:25:38 - - 209 static 2012-02-14 07:25 rpool/ROOT/oi_151.1.2@install - - 31,6 static 2011-10-12 07:56 oi_151a rpool/ROOT/oi_151a - - 13,6 static 2011-10-29 11:20 openindiana rpool/ROOT/openindiana - - 22,8 static 2011-10-12 07:44 richard@shuttleX:~$ beadm list -d BE/Dataset Active Mountpoint Space Policy Created oi_151.1.2 rpool/ROOT/oi_151.1.2 NR / 7,32G static 2012-02-14 07:25 oi_151a rpool/ROOT/oi_151a - - 13,6M static 2011-10-29 11:20 openindiana rpool/ROOT/openindiana - - 22,8M static 2011-10-12 07:44 richard@shuttleX:~$ beadm list -s BE/Snapshot Space Policy Created oi_151.1.2 oi_151.1.2@2011-10-29-09:20:36 167M static 2011-10-29 11:20 oi_151.1.2@2012-02-14-06:25:38 209M static 2012-02-14 07:25 oi_151.1.2@install 31,6M static 2011-10-12 07:56 oi_151a openindiana richard@shuttleX:~$ beadm list -sd BE/Dataset/Snapshot Active Mountpoint Space Policy Created oi_151.1.2 rpool/ROOT/oi_151.1.2 NR / 7,32 static 2012-02-14 07:25 rpool/ROOT/oi_151.1.2@2011-10-29-09:20:36 - - 167 static 2011-10-29 11:20 rpool/ROOT/oi_151.1.2@2012-02-14-06:25:38 - - 209 static 2012-02-14 07:25 rpool/ROOT/oi_151.1.2@install - - 31,6 static 2011-10-12 07:56 oi_151a rpool/ROOT/oi_151a - - 13,6 static 2011-10-29 11:20 openindiana rpool/ROOT/openindiana - - 22,8 static 2011-10-12 07:44
notice the lines missing the units (G or M) in the space column.
Updated by Rich Lowe about 10 years ago
- Category set to cmd - userland programs
- Status changed from New to Resolved
- Assignee set to Alexander Eremin
- % Done changed from 0 to 100
- Tags deleted (
needs-triage)
Resolved in r13633 commit:7d8ad953b304
Actions